fix button flickering

--- a/src/assets/css/website.css
+++ b/src/assets/css/website.css
@@ -906,7 +906,7 @@ footer .navigation {
     text-decoration: none;
     background: #28BD8B;
     color: white;
-    border-style: none;
+    border-color: #28BD8B;
 }
 
 .text-link{
